--- a/manual_redteam/scratch.ipynb
+++ b/manual_redteam/scratch.ipynb
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "47f1d981",
    "metadata": {},
    "outputs": [],
@@ -330,7 +330,8 @@
     "\n",
     "npy_path = \"/root/roger_backdoor/noising/outputs/cov/cov_FabienRoger_backdoor_250913_1B_layer10.npy\"\n",
     "cov_np = np.load(npy_path)\n",
-    "c = torch.from_numpy(cov_np)\n"
+    "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
+    "c = torch.from_numpy(cov_np).to(device)\n"
    ]
   },
   {
@@ -410,7 +411,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.10.18"
   }
  },
  "nbformat": 4,
